[tool.poetry]
name = "cellxm"
version = "1.1.0"
description = ""
authors = ["harisbal <theoballisgr@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cellxm = "cellxm.main:app"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
typer = {version = ">=0.7.0", extras = ["all"]}
geopandas = "^0.13.0"
cloudpathlib = "0.14.0"
rasterio = "^1.3.6"
rioxarray = "^0.14.1"
h3 = {version = "^4.0.0b2", allow-prereleases = true}
pyogrio = "^0.6.0"
boto3 = "^1.26.134"
shapely = "^2.0.1"
cmake = "^3.26.3"
toml = "^0.10.2"
requests = "^2.31.0"
more-itertools = "^9.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
python-dotenv = "^1.0.0"
ipykernel = "^6.22.0"
plotly = "^5.15.0"
nbformat = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
